Category Service added, methods written

--- a/Services/Catalog/Course.Services.Catalog/appsettings.json
+++ b/Services/Catalog/Course.Services.Catalog/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DatabaseSetting": {
     "CourseCollectionName": "Course",
-    "CategoryCollectionName": "Category",
+    "CategoryCollectionName": "Categoryes",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "CatalogDb"
 
