--- a/Services/Catalog/Course.Services.Catalog/Course.Services.Catalog.csproj
+++ b/Services/Catalog/Course.Services.Catalog/Course.Services.Catalog.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Course.Shared\Course.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
